[tool.poetry]
name = "anthropics-rag"
version = "0.1.0"
description = ""
authors = ["mharary <moshe.harary@skyboxsecurity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.8.0"
openai = "^1.53.0"
langchain-openai = "^0.2.4"
jinja2 = "^3.1.4"
tqdm = "^4.66.6"
pinecone = "^5.3.1"
rank-bm25 = "^0.2.2"
nltk = "^3.9.1"
pypdf2 = "^3.0.1"
certifi = "^2024.8.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
